--- a/stk_backend/Cargo.toml
+++ b/stk_backend/Cargo.toml
@@ -12,6 +12,8 @@ env_logger = "0.11.6"
 log = "0.4.25"
 serde = { version = "1", features = ["derive"] }
 uuid = { version = "1.4", features = ["v4", "serde"] }
+rand = "0.9.0"
 
 [dev-dependencies]
 actix-rt = "2" 
+diesel_migrations = "2"
