--- a/stk_backend/Cargo.toml
+++ b/stk_backend/Cargo.toml
@@ -10,7 +10,8 @@ dotenvy = "0.15.7"
 env_logger = "0.11.6"
 log = "0.4.25"
 serde = { version = "1", features = ["derive"] }
-uuid = { version = "1.4", features = ["v4", "serde"] }
+uuid = { version = "1.13.2", features = ["v4", "serde"] }
+thiserror = "2.0.11"
 
 [dev-dependencies]
 actix-http="3.9.0"
