--- a/stk_backend/Cargo.toml
+++ b/stk_backend/Cargo.toml
@@ -5,17 +5,18 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4"
-diesel = { version = "2", features = ["sqlite", "r2d2", "uuid", "serde_json"] }
+diesel = { version = "2.2.8", features = ["sqlite", "r2d2", "uuid", "serde_json"] }
 dotenvy = "0.15.7"
 env_logger = "0.11.6"
-log = "0.4.25"
-serde = { version = "1", features = ["derive"] }
-uuid = { version = "1.13.2", features = ["v4", "serde"] }
-thiserror = "2.0.11"
+log = "0.4.26"
+serde = { version = "1.0.218", features = ["derive"] }
+uuid = { version = "1.15.1", features = ["v4", "serde"] }
+thiserror = "2.0.12"
+argon2 = "0.5"
 
 [dev-dependencies]
 actix-http="3.9.0"
 actix-rt = "2" 
 diesel_migrations = "2"
 rand = "0.9.0"
-serde_json = "1"
+serde_json = "1.0.140"
